[tool.poetry]
name = "hrnet"
version = "0.1.0"
description = ""
authors = ["Louis Lac <lac.louis5@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.1"
torchvision = "^0.15.2"
numpy = "^1.24.3"
pillow = "^9.5.0"
pytorch-model-summary = "^0.1.2"
tqdm = "^4.65.0"
rich = "^13.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
