[tool.poetry]
name = "hrnet"
version = "0.1.0"
description = ""
authors = ["Louis Lac <lac.louis5@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.1"
pytorch-model-summary = "^0.1.2"
coremltools = "^6.3.0"
onnx = "^1.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
summary = "hrnet:main"
export = "export:main"